3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/treasure.c - prevent crashes with some broken treasure lists.
Brendan Lally 2005-10-05

server/shop.c: convert val to sint64 - compilation issues with Win32. Checked with
 patch author that it's fine.
Ryo 2005-10-04

common/map.c - fix output names in new_save_map
--
server/shop.c - don't assume that shop_specialisation_ratio only gets passed
items with valid types.
--
common/map.c - /actually/ fix pointer issue
--
common/map.c - fix potential issue with NULL pointer
Brendan Lally 2005-10-04

common/map.c - fix an inequality in for loop - not sure if this actually
fixes anything of note, but the previous form was definatly wrong.

common/item.c - big item type table, function to deal therewith
common/loader.l - add player_sold flag
common/map.c - shop related header parsing
include/define.h - define typedata, player_sold flag and some new shop flags
include/libproto.h - define typedata related functions
include/map.h - define new shop headers
include/sproto.h - define new functions in shop.c
server/apply.c - Change shop mat usage message
server/c_object.c - Change display of price estimates
server/shop.c - new functions describe_shop, value_limit, shopkeeper_approval, 
shop_greed, shop_specialisation_ratio, substantially alter query_cost_string 
and query_cost to make use of these
server/skill_util.c - make bargaining a directly usable skill
doc/Developers/shops - document the above
doc/Developers/maps-technical - add shopheader names, and reference to shops doc
Brendan Lally 2005-10-03

server/disease.c: check for value <= 0 as some diseases get dumped on a map